--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
             
-            <img src="dice-5.png" alt="Dice" class="dice">
+            <img src="images/dice-5.png" alt="Dice" class="dice">
         </div>
         
         <script src="app.js"></script>
